--- a/index.html
+++ b/index.html
@@ -1,33 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Iccnu-oauth2 by ccnuyan</title>
+    <meta name="description" content="Iccnu-oauth2 : iccnu的oauth2认证服务说明文档">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Iccnu-oauth2</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Iccnu-oauth2</h1>
-        <p>iccnu的oauth2认证服务说明文档</p>
 
-        <p class="view"><a href="https://github.com/ccnuyan/iccnu-oauth2">View the Project on GitHub <small>ccnuyan/iccnu-oauth2</small></a></p>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/ccnuyan/iccnu-oauth2">View on GitHub</a>
 
+          <h1 id="project_title">Iccnu-oauth2</h1>
+          <h2 id="project_tagline">iccnu的oauth2认证服务说明文档</h2>
 
-        <ul>
-          <li><a href="https://github.com/ccnuyan/iccnu-oauth2/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/ccnuyan/iccnu-oauth2/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/ccnuyan/iccnu-oauth2">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/ccnuyan/iccnu-oauth2/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/ccnuyan/iccnu-oauth2/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>
 <a id="iccnu-oauth2-authentication-flow-instruction" class="anchor" href="#iccnu-oauth2-authentication-flow-instruction" aria-hidden="true"><span class="octicon octicon-link"></span></a>ICCNU Oauth2 Authentication Flow Instruction</h1>
 
@@ -69,12 +72,17 @@
 
 <p>需要参考Resource Owner Flow，用户登录至您的应用后，应创建新用户并进入登录状态。</p>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/ccnuyan">ccnuyan</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Iccnu-oauth2 maintained by <a href="https://github.com/ccnuyan">ccnuyan</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
     
+
   </body>
 </html>
