--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 <p><strong>租户应用密码</strong> "secret" : *****</p>
 
-<p>主页地址 "homeURI" : "http://localhost:8080/"</p>
+<p><strong>主页地址</strong> "homeURI" : "http://localhost:8080/"</p>
 
 <p><strong>租户应用名</strong> "name" : "测试应用名1"</p>
 
@@ -169,9 +169,11 @@
 <h2>
 <a id="包中的内容" class="anchor" href="#%E5%8C%85%E4%B8%AD%E7%9A%84%E5%86%85%E5%AE%B9" aria-hidden="true"><span class="octicon octicon-link"></span></a>包中的内容</h2>
 
-<p>dot net BS Authorization Code Grant：dot net B/S 例子
-dot net CS Resource Owner Password Credentials Grant：dot net C/S 例子
-node.js BS Authorization Code Grant：node.js B/S 例子</p>
+<p>dot net BS Authorization Code Grant：dot net B/S 例子</p>
+
+<p>dot net CS Resource Owner Password Credentials Grant：dot net C/S 例子</p>
+
+<p>node.js BS Authorization Code Grant：node.js B/S 例子</p>
       </section>
     </div>
 
