Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
 
 <ol>
 <li><p>你的用户需要现在ICCNU上注册为用户。</p></li>
-<li>
-<p>你需要将你的应用申请成为ICCNU认证服务的租户。</p>
+<li><p>你需要将你的应用申请成为ICCNU认证服务的租户。</p></li>
+</ol>
 
-<p>租户需要为站点提供的信息包括</p>
+<p>租户应用需要为站点提供的信息包括</p>
 
 <p><strong>回调地址</strong> "redirectURI" : "http://localhost:8080/account/login"</p>
 
@@ -95,8 +95,6 @@
 <p><strong>认证类型</strong> "authType" : "code"</p>
 
 <p>其中，回调地址、租户应用Id及租户应用密码为Authorization Code Grant Flow认证流程中需要用到的必须字段; 主页地址，租户应用名, 租户应用描述为显示给用户的字段，不是必须的；认证类型在Authorization Code Grant Flow中固定为"Code"。   </p>
-</li>
-</ol>
 
 <h4>
 <a id="认证流程" class="anchor" href="#%E8%AE%A4%E8%AF%81%E6%B5%81%E7%A8%8B" aria-hidden="true"><span class="octicon octicon-link"></span></a>认证流程</h4>
@@ -119,10 +117,10 @@
 
 <ol>
 <li><p>你的用户需要现在ICCNU上注册为用户。</p></li>
-<li>
-<p>你需要将你的应用申请成为ICCNU认证服务的租户。</p>
+<li><p>你需要将你的应用申请成为ICCNU认证服务的租户。</p></li>
+</ol>
 
-<p>租户需要为站点提供的信息包括</p>
+<p>租户应用需要为站点提供的信息包括</p>
 
 <p><strong>租户应用Id</strong> "id" : "code_test"</p>
 
@@ -139,8 +137,6 @@
 <p>其中，租户应用Id及租户应用密码为Resource Owner Password Credentials Grant Flow认证流程中需要用到的必须字段; 主页地址，租户应用名, 租户应用描述为显示给用户的字段，不是必须的；认证类型在Resource Owner Password Credentials Grant Flow中固定为"resource_owner"。   </p>
 
 <p>C/S应用并不是在浏览器中进行认证流程，所以不需要提供回调地址字段。</p>
-</li>
-</ol>
 
 <h4>
 <a id="认证流程-1" class="anchor" href="#%E8%AE%A4%E8%AF%81%E6%B5%81%E7%A8%8B-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>认证流程</h4>
