--- a/index.html
+++ b/index.html
@@ -210,7 +210,13 @@
 <p>QQ83000710 严中华</p>
 
 <h2>
-<a id="附4-http-正文" class="anchor" href="#%E9%99%844-http-%E6%AD%A3%E6%96%87" aria-hidden="true"><span class="octicon octicon-link"></span></a>附4 HTTP 正文</h2>
+<a id="附4-api--http-context" class="anchor" href="#%E9%99%844-api--http-context" aria-hidden="true"><span class="octicon octicon-link"></span></a>附4 API &amp; http context</h2>
+
+<h3>
+<a id="1-redirect-full-uri-example" class="anchor" href="#1-redirect-full-uri-example" aria-hidden="true"><span class="octicon octicon-link"></span></a>1 redirect full uri example</h3>
+
+<pre><code>http://www.iccnu.net/oauth2/authorize?client_id=code_test&amp;redirect_uri=http:%2F%2Flocalhost:8080%2FAccount%2FLogin&amp;state=-0Fs7e5Pj4TGr0xGK_sqSQ&amp;response_type=code
+</code></pre>
 
 <h3>
 <a id="1-exchage-code-for-token" class="anchor" href="#1-exchage-code-for-token" aria-hidden="true"><span class="octicon octicon-link"></span></a>1 exchage code for token</h3>
